# vole-machine-simulator

./: .gitignore  CMakeLists.txt  MainMachine.h  README.md  UiFunctions.h  ZMO_program_executable  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_predefs.h  receiver.cpp  receiver.h  resources.qrc  run  stylesheet.qss  vole  vole.pro
machine/: ALU.h  CPU.h  CU.h  Machine.h  Memory.h  Register.h
